# ChangeLog for media-libs/gstreamer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.223 2009/05/11 03:15:08 tester Exp $

*gstreamer-0.10.23 (11 May 2009)

  11 May 2009; Olivier Crête <tester@gentoo.org> +gstreamer-0.10.23.ebuild:
  Version bump

  03 May 2009; Tobias Klausmann <klausman@gentoo.org>
  gstreamer-0.10.22.ebuild:
  Stable on alpha, bug #266986

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org> gstreamer-0.10.20.ebuild:
  arm/sh stable wrt #232054

  31 Mar 2009; Olivier Crête <tester@gentoo.org> gstreamer-0.10.22.ebuild:
  Let .la files be for now, bug #264249

  30 Mar 2009; Olivier Crête <tester@gentoo.org> gstreamer-0.10.22.ebuild:
  Remove +nls to make solar happy (but you really want nls)

  30 Mar 2009; Olivier Crête <tester@gentoo.org> gstreamer-0.10.22.ebuild:
  The debug use flag just enabled -g, use CFLAGS if you want that

*gstreamer-0.10.22 (30 Mar 2009)

  30 Mar 2009; Olivier Crête <tester@gentoo.org> +gstreamer-0.10.22.ebuild:
  Version bump

*gstreamer-0.10.21-r10 (09 Jan 2009)
*gstreamer-0.10.21-r3 (09 Jan 2009)

  09 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/gstreamer-0.10.21-b.g.o-555631.patch, -gstreamer-0.10.21-r1.ebuild,
  -gstreamer-0.10.21-r2.ebuild, +gstreamer-0.10.21-r3.ebuild,
  +gstreamer-0.10.21-r10.ebuild:
  Fix bug 250704, upstream bug 555631, Banshee crashing or doing a tail-spin
  with gstreamer. Bump masked version to -r10, the new 'ordinary' version is
  -r3.

*gstreamer-0.10.21-r2 (24 Dec 2008)

  24 Dec 2008; <ssuominen@gentoo.org> +gstreamer-0.10.21-r2.ebuild:
  Drop .la files as unnecessary libtool files.

*gstreamer-0.10.21-r1 (24 Dec 2008)

  24 Dec 2008; <ssuominen@gentoo.org>
  +files/gstreamer-0.10.21-bison241.patch, +gstreamer-0.10.21-r1.ebuild:
  Patch configure to support three components in bisons versioning. 
  Use versionator not to show bad example to our new developers.