@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/gstreamer-0.10.22.ebuild,v 1.5 2009/05/03 17:32:16 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/gstreamer-0.10.22.ebuild,v 1.7 2009/05/14 19:10:06 maekke Exp $
 
 EAPI=2
 
