@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/gstreamer
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.223 2009/05/11 03:15:08 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.225 2009/05/14 19:10:06 maekke Exp $
+
+  14 May 2009; Markus Meier <maekke@gentoo.org> gstreamer-0.10.22.ebuild:
+  amd64 stable, bug #266986
+
+  12 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  gstreamer-0.10.22.ebuild:
+  stable x86, bug 266986
 
 *gstreamer-0.10.23 (11 May 2009)
 
